# mcp_test

./: CONFIGURATION.md  README.md  brave_search_mcp_server.py  cursor_create_a_python_mcp_server_for_websearch.md  demo.py  env.example  example_client.py  mcp-config.json  pyproject.toml  requirements.txt  start_server.sh  test_server.py
